--- a/yolov8/treinamento.ipynb
+++ b/yolov8/treinamento.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "**Orientador**: Prof. Dr. Daniel Cruz Cavalieri\n",
     "\n",
-    "**Instituição**: IFES\n",
+    "**Instituição**: IFjES\n",
     "\n",
     "**Data**: Jul/2024 \n",
     "\n",
